--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
         <div id="alertas">
             <div id="cabecera"> </div>
             <div id="mensaje"> </div>
-            <div id="contenido"> </div>
+            <div id="contenido"> ALERTAS </div>
         </div>
 
         <script type="text/javascript" src="cordova.js"></script>
@@ -42,6 +42,7 @@
             //Check if it already exists or not
             if(applaunchCount){
                //This is a second time launch, and count = applaunchCount
+               verAlertas();
             }else{
               //Local storage is not set, hence first time launch. set the local storage item
               window.localStorage.setItem('launchCount',1);
