--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
               //Local storage is not set, hence first time launch. set the local storage item
               window.localStorage.setItem('launchCount',1);
               //Do the other stuff related to first time launch
-              verRegistro();
+              verAlertas();
             }
         </script>
     </body>
