--- a/www/index.html
+++ b/www/index.html
@@ -22,15 +22,15 @@
                 <form> 
                     <table>
                         <tr>
-                            <td> <b>DNI </td> <td>:</b> </td><td> <input type="text" id="dni" name="dni" maxlength="8"> </td>
+                            <td> <b>DNI </td> <td>:</b> </td><td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
                         </tr>
                         <tr>
-                            <td> <b>TEL&Eacute;FONO </td> <td>:</b> </td><td> <input type="text" id="telefono" name="telefono" maxlength="15"> </td>
+                            <td> <b>TEL&Eacute;FONO </td> <td>:</b> </td><td> <input type="text" id="telefono" name="telefono" maxlength="15" class="inputText"> </td>
                         <tr>
-                            <td> <b>NOMBRE </td> <td>:</b> </td><td> <input type="text" id="nombre" name="nombre" maxlength="30"> </td>
+                            <td> <b>NOMBRE </td> <td>:</b> </td><td> <input type="text" id="nombre" name="nombre" maxlength="30" class="inputText"> </td>
                         </tr>
                         <tr>
-                            <td> <b>CORREO </td> <td>:</b> </td><td> <input type="email" id="email" name="email"> </td>
+                            <td> <b>CORREO </td> <td>:</b> </td><td> <input type="email" id="email" name="email" class="inputText"> </td>
                         </tr>
                         <tr>
                             <td colspan="3"><input type="submit" value="Enviar" class="inputSubmit"></td>
