--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="mensaje"> BIENVENIDO, POR FAVOR REGISTRESE PARA USAR LA APP. </div>
             <div class="contenido"> 
-                <form> 
+                <form name="formularioRegistro" onsubmit="return enviarForm()"> 
                     <table>
                         <tr>
                             <td> <b>DNI </td> <td>:</b> </td><td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
@@ -30,7 +30,7 @@
                             <td> <b>NOMBRE </td> <td>:</b> </td><td> <input type="text" id="nombre" name="nombre" maxlength="30" class="inputText"> </td>
                         </tr>
                         <tr>
-                            <td> <b>CORREO </td> <td>:</b> </td><td> <input type="email" id="email" name="email" class="inputText"> </td>
+                            <td> <b>CORREO </td> <td>:</b> </td><td> <input type="email" id="email" name="email" maxlength="30" class="inputText"> </td>
                         </tr>
                         <tr>
                             <td colspan="3"><input type="submit" value="Enviar" class="inputSubmit"></td>
