--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="mensaje"> BIENVENIDO, POR FAVOR REGISTRESE PARA USAR LA APP. </div>
             <div class="contenido"> 
-                <form name="formularioRegistro"> 
+                <form id="formularioRegistro"> 
                     <table>
                         <tr>
                             <td> <b>DNI </td> <td>:</b> </td><td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
