--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
             <div class="mensaje"> BIENVENIDO, POR FAVOR REGISTRESE PARA USAR LA APP. </div>
             <div class="contenido"> 
                 <div id="datos-1" data-datos-id="1"> 
-                <form> 
+                <form onsubmit="return registroUsuario();"> 
                     <table>
                         <tr>
                             <td> <b>DNI </td> <td>:</b> </td><td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
