--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
             <div class="mensaje"> BIENVENIDO, POR FAVOR REGISTRESE PARA USAR LA APP. </div>
             <div class="contenido"> 
                 <div id="datos-1" data-datos-id="1"> 
-                <form id="registroForm"> 
+                <form id="registroUsuario" name="registroUsuario"> 
                     <table>
                         <tr>
                             <td> <b>DNI </td> <td>:</b> </td><td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
@@ -35,7 +35,7 @@
                             <td> <b>CORREO </td> <td>:</b> </td><td> <input type="email" id="email" name="email" maxlength="30" class="inputText"> </td>
                         </tr>
                         <tr>
-                            <td colspan="3"><input type="button" value="Enviar" class="inputSubmit" onclick="registroUsuario();"></td>
+                            <td colspan="3"><input type="submit" value="Enviar" class="inputSubmit"></td>
                         </tr>
                     </table>
                 </form> 
