--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
                             <td colspan="3"><input type="submit" value="Enviar" class="inputSubmit"></td>
                         </tr>
                     </table>
+                    <div id="uuid"></div>
                 </form> 
                 </div>
             </div>
