--- a/www/index.html
+++ b/www/index.html
@@ -56,17 +56,19 @@
         <script type="text/javascript">
             app.initialize();
 
-           /* var applaunchCount = window.localStorage.getItem('launchCount');
+            var applaunchCount = window.localStorage.getItem('launchCount');
             //Check if it already exists or not
             if(applaunchCount){
                //This is a second time launch, and count = applaunchCount
-               verAlertas();
+               //verAlertas();
+               obtenerId();
             }else{
               //Local storage is not set, hence first time launch. set the local storage item
               window.localStorage.setItem('launchCount',1);
               //Do the other stuff related to first time launch
-              verAlertas();
-            } */
+              //verAlertas();
+              obtenerId();
+            } 
         </script>
     </body>
 </html>
