--- a/www/index.html
+++ b/www/index.html
@@ -62,12 +62,14 @@
                //This is a second time launch, and count = applaunchCount
                //verAlertas();
                obtenerId();
+               alert("ID1");
             }else{
               //Local storage is not set, hence first time launch. set the local storage item
               window.localStorage.setItem('launchCount',1);
               //Do the other stuff related to first time launch
               //verAlertas();
               obtenerId();
+              alert("ID2");
             } 
         </script>
     </body>
