--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
         <title>Seguridad Ciudadana</title>
     </head>
-    <body onload="obtenerId()">
+    <body>
 
          <!-- REGISTRO -->
         <div id="registro">
@@ -55,6 +55,7 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
+            obtenerId();
         </script>
     </body>
 </html>
