--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
          <!-- REGISTRO -->
         <div id="registro">
             <div class="cabecera"> 
+                <img class="bg" src="img/huaral.jpg">
                 <div class="logo"> <img src="img/logo.jpg"> </div>
                 <div class="texto"> <img src="img/alerta_huaral.png"> </div>
             </div>
