--- a/www/index.html
+++ b/www/index.html
@@ -60,13 +60,23 @@
                 </form> 
                 </div>
             </div>
+        </div>
  
 
         <!-- MENU ALERTAS -->
         <div id="alertas">
-            <div id="cabecera"> </div>
-            <div id="mensaje"> </div>
-            <div id="contenido"> ALERTAS </div>
+            <div class="cabecera"> 
+                <img class="bg2" src="img/huaral.jpg"> 
+                <div class="texto"> <p class="fs130"><b>ALERTAS SEGURIDAD CIUDADANA 246-4538</b></p> <p class="fs90"> PRESIONA AQU&Iacute; PARA LLAMAR </p></div>
+            </div>
+            <div class="contenido">
+                <div class="alerta1"><p class="fs100">Limpieza</p> <p class="fs80">publica</p></div>
+                <div class="alerta2"><p class="fs100">Parques y </p> <p class="fs80">jardines</p></div>
+                <div class="alerta3"><p class="fs100">vereda/pista </p> <p class="fs80">en mal estado</p></div>
+                <div class="alerta4"><p class="fs100">Ruidos </p> <p class="fs80">molestos</p></div>
+                <div class="h40"></div>
+                <div class="otrasAlertas"> <p class="fs120">Otras Consultas</p>
+            </div>
         </div>
 
         <script type="text/javascript" src="cordova.js"></script>
