--- a/www/index.html
+++ b/www/index.html
@@ -11,74 +11,74 @@
         <title>Seguridad Ciudadana</title>
     </head>
     <body>
-
-         <!-- REGISTRO -->
-        <div id="registro">
-            <div class="cabecera"> 
-                <img class="bg" src="img/huaral.jpg">
-                <div class="logo"> <img src="img/logo.jpg"> </div>
-                <div class="texto"> <img src="img/alerta_huaral.png"> </div>
+        <div id="contenedor">
+             <!-- REGISTRO -->
+            <div id="registro">
+                <div class="cabecera"> 
+                    <img class="bg" src="img/huaral.jpg">
+                    <div class="logo"> <img src="img/logo.jpg"> </div>
+                    <div class="texto"> <img src="img/alerta_huaral.png"> </div>
+                </div>
+                <div class="mensaje"> BIENVENIDO, POR FAVOR REGISTRESE PARA USAR LA APP. </div>
+                <div class="contenido"> 
+                    <div id="datos-1" data-datos-id="1"> 
+                    <form id="registroUsuario" name="registroUsuario"> 
+                        <table>
+                            <tr>
+                                <td> <b>DNI :</b> </td>
+                            </tr>
+                            <tr>
+                                <td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
+                            </tr>
+                            <tr class="h10"></tr>
+                            <tr>
+                                <td> <b>TEL&Eacute;FONO :</b> </td>
+                            </tr>
+                            <tr>
+                                <td> <input type="text" id="telefono" name="telefono" maxlength="15" class="inputText"> </td>
+                            </tr>
+                            <tr class="h10"></tr>
+                            <tr>
+                                <td> <b>NOMBRE :</b> </td>
+                            </tr>
+                            <tr>
+                                <td> <input type="text" id="nombre" name="nombre" maxlength="30" class="inputText"> </td>
+                            </tr>
+                            <tr class="h10"></tr>
+                            <tr>
+                                <td> <b>CORREO :</b> </td>
+                            </tr>
+                            <tr>
+                                <td> <input type="email" id="email" name="email" maxlength="30" class="inputText"> </td>
+                            </tr>
+                            <tr class="h10"></tr>
+                            <tr>
+                                <td colspan="3"><input type="submit" value="Enviar" class="inputSubmit"></td>
+                            </tr>
+                        </table>
+                        <div id="code"></div>
+                    </form> 
+                    </div>
+                </div>
             </div>
-            <div class="mensaje"> BIENVENIDO, POR FAVOR REGISTRESE PARA USAR LA APP. </div>
-            <div class="contenido"> 
-                <div id="datos-1" data-datos-id="1"> 
-                <form id="registroUsuario" name="registroUsuario"> 
-                    <table>
-                        <tr>
-                            <td> <b>DNI :</b> </td>
-                        </tr>
-                        <tr>
-                            <td> <input type="text" id="dni" name="dni" maxlength="8" class="inputText"> </td>
-                        </tr>
-                        <tr class="h10"></tr>
-                        <tr>
-                            <td> <b>TEL&Eacute;FONO :</b> </td>
-                        </tr>
-                        <tr>
-                            <td> <input type="text" id="telefono" name="telefono" maxlength="15" class="inputText"> </td>
-                        </tr>
-                        <tr class="h10"></tr>
-                        <tr>
-                            <td> <b>NOMBRE :</b> </td>
-                        </tr>
-                        <tr>
-                            <td> <input type="text" id="nombre" name="nombre" maxlength="30" class="inputText"> </td>
-                        </tr>
-                        <tr class="h10"></tr>
-                        <tr>
-                            <td> <b>CORREO :</b> </td>
-                        </tr>
-                        <tr>
-                            <td> <input type="email" id="email" name="email" maxlength="30" class="inputText"> </td>
-                        </tr>
-                        <tr class="h10"></tr>
-                        <tr>
-                            <td colspan="3"><input type="submit" value="Enviar" class="inputSubmit"></td>
-                        </tr>
-                    </table>
-                    <div id="code"></div>
-                </form> 
+     
+
+            <!-- MENU ALERTAS -->
+            <div id="alertas">
+                <div class="cabecera"> 
+                    <img class="bg2" src="img/huaral.jpg"> 
+                    <div class="texto"> <p class="fs130"><b>ALERTAS SEGURIDAD CIUDADANA 246-4538</b></p> <p class="fs90"> PRESIONA AQU&Iacute; PARA LLAMAR </p></div>
+                </div>
+                <div class="contenido">
+                    <div class="alerta1"><p class="fs100">Limpieza</p> <p class="fs80">publica</p></div>
+                    <div class="alerta2"><p class="fs100">Parques y </p> <p class="fs80">jardines</p></div>
+                    <div class="alerta3"><p class="fs100">vereda/pista </p> <p class="fs80">en mal estado</p></div>
+                    <div class="alerta4"><p class="fs100">Ruidos </p> <p class="fs80">molestos</p></div>
+                    <div class="h40"></div>
+                    <div class="otrasAlertas"> <p class="fs120">Otras Consultas</p>
                 </div>
             </div>
         </div>
- 
-
-        <!-- MENU ALERTAS -->
-        <div id="alertas">
-            <div class="cabecera"> 
-                <img class="bg2" src="img/huaral.jpg"> 
-                <div class="texto"> <p class="fs130"><b>ALERTAS SEGURIDAD CIUDADANA 246-4538</b></p> <p class="fs90"> PRESIONA AQU&Iacute; PARA LLAMAR </p></div>
-            </div>
-            <div class="contenido">
-                <div class="alerta1"><p class="fs100">Limpieza</p> <p class="fs80">publica</p></div>
-                <div class="alerta2"><p class="fs100">Parques y </p> <p class="fs80">jardines</p></div>
-                <div class="alerta3"><p class="fs100">vereda/pista </p> <p class="fs80">en mal estado</p></div>
-                <div class="alerta4"><p class="fs100">Ruidos </p> <p class="fs80">molestos</p></div>
-                <div class="h40"></div>
-                <div class="otrasAlertas"> <p class="fs120">Otras Consultas</p>
-            </div>
-        </div>
-
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
