--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
             <div id="alertas">
                 <div class="cabecera"> 
                     <img class="bg2" src="img/huaral.jpg"> 
-                    <div class="texto"> <p class="fs130"><b>ALERTAS SEGURIDAD CIUDADANA 246-4538</b></p> <p class="fs90"> PRESIONA AQU&Iacute; PARA LLAMAR </p></div>
+                    <div class="alertas_seguridad"> <img src="img/ALERTAS_SEGURIDAD.png"> </div>
                 </div>
                 <div class="contenido">
                     <div class="alerta1"><p class="fs100">Limpieza</p> <p class="fs80">publica</p></div>
