--- a/www/index.html
+++ b/www/index.html
@@ -68,7 +68,11 @@
                 <div class="cabecera"> 
                     <img class="bg2" src="img/huaral.jpg"> 
                     <div class="alertas_seguridad"> <img src="img/ALERTAS_SEGURIDAD.png"> </div>
-                </div>
+                    <div class="alertas_inmediatas"> 
+                        <img src="img/asaltos.png"> 
+                        <img src="img/emergencias_medicas.png"> 
+                        <img src="img/incendio.png">
+                    </div>
                 <div class="contenido">
                     <div class="alerta1"><p class="fs100">Limpieza</p> <p class="fs80">publica</p></div>
                     <div class="alerta2"><p class="fs100">Parques y </p> <p class="fs80">jardines</p></div>
