--- a/www/index.html
+++ b/www/index.html
@@ -74,14 +74,19 @@
                         <img src="img/incendio.png">
                     </div>
                 <div class="contenido">
-                    <div class="alerta1"><p class="fs100">Limpieza</p> <p class="fs80">publica</p></div>
-                    <div class="alerta2"><p class="fs100">Parques y </p> <p class="fs80">jardines</p></div>
-                    <div class="alerta3"><p class="fs100">vereda/pista </p> <p class="fs80">en mal estado</p></div>
-                    <div class="alerta4"><p class="fs100">Ruidos </p> <p class="fs80">molestos</p></div>
-                    <div class="h40"></div>
-                    <div class="otrasAlertas"> <p class="fs120">Otras Consultas</p>
+                    <img class="linea1" src="img/limpieza_publica.png">
+                    <img class="linea1" src="img/parques_jardines.png">
+                    <img class="linea1" src="img/calles_mal_estado.png">
+                    <img class="linea1" src="img/ruidos_molestos.png">
+                    <img class="linea2" src="img/otras_consultas.png">
                 </div>
-            </div>
+                <div class="bottom">
+                    <img src="img/home.png">
+                    <img src="img/sms.png"> 
+                    <img src="img/facebook.png"> 
+                    <img src="img/noticias.png"> 
+                    <img src="img/mi_cuenta.png">
+                </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
