--- a/www/index.html
+++ b/www/index.html
@@ -88,6 +88,143 @@
                         <img src="img/mi_cuenta.png">
                     </div>
                 </div>
+            </div>
+
+            <!-- ALERTA1 -->
+            <div id="alerta1">
+                <div class="cabecera"> 
+                    <img class="bg2" src="img/huaral.jpg"> 
+                    <div class="top"> <img class="w100" src="img/top_alerta1.jpg"> </div>
+                    <div class="mid"> 
+                        <img class="w80" src="img/limpieza.png">
+                        <form>
+                             <textarea name="mensaje" rows="5" cols="50"></textarea>
+                        </form>
+                    </div>
+                    <div class="content">
+                        <img class="ml3" src="img/foto.jpg">
+                        <img class="ml3" src="img/audio.jpg">
+                        <img class="ml3" src="img/ubicacion.jpg">
+                    </div>
+                    <div class="bottom">
+                        <img src="img/home.png">
+                        <img src="img/sms.png"> 
+                        <img src="img/facebook.png"> 
+                        <img src="img/noticias.png"> 
+                        <img src="img/mi_cuenta.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- ALERTA2 -->
+            <div id="alerta2">
+                <div class="cabecera"> 
+                    <img class="bg2" src="img/huaral.jpg"> 
+                    <div class="top"> <img class="w100" src="img/top_alerta1.jpg"> </div>
+                    <div class="mid"> 
+                        <img class="w80" src="img/parques.png">
+                        <form>
+                             <textarea name="mensaje" rows="5" cols="50"></textarea>
+                        </form>
+                    </div>
+                    <div class="content">
+                        <img class="ml3" src="img/foto.jpg">
+                        <img class="ml3" src="img/audio.jpg">
+                        <img class="ml3" src="img/ubicacion.jpg">
+                    </div>
+                    <div class="bottom">
+                        <img src="img/home.png">
+                        <img src="img/sms.png"> 
+                        <img src="img/facebook.png"> 
+                        <img src="img/noticias.png"> 
+                        <img src="img/mi_cuenta.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- ALERTA3 -->
+            <div id="alerta3">
+                <div class="cabecera"> 
+                    <img class="bg2" src="img/huaral.jpg"> 
+                    <div class="top"> <img class="w100" src="img/top_alerta1.jpg"> </div>
+                    <div class="mid"> 
+                        <img class="w80" src="img/calles.png">
+                        <form>
+                             <textarea name="mensaje" rows="5" cols="50"></textarea>
+                        </form>
+                    </div>
+                    <div class="content">
+                        <img class="ml3" src="img/foto.jpg">
+                        <img class="ml3" src="img/audio.jpg">
+                        <img class="ml3" src="img/ubicacion.jpg">
+                    </div>
+                    <div class="bottom">
+                        <img src="img/home.png">
+                        <img src="img/sms.png"> 
+                        <img src="img/facebook.png"> 
+                        <img src="img/noticias.png"> 
+                        <img src="img/mi_cuenta.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- ALERTA4 -->
+            <div id="alerta4">
+                <div class="cabecera"> 
+                    <img class="bg2" src="img/huaral.jpg"> 
+                    <div class="top"> <img class="w100" src="img/top_alerta1.jpg"> </div>
+                    <div class="mid"> 
+                        <img class="w80" src="img/ruidos.png">
+                        <form>
+                             <textarea name="mensaje" rows="5" cols="50"></textarea>
+                        </form>
+                    </div>
+                    <div class="content">
+                        <img class="ml3" src="img/foto.jpg">
+                        <img class="ml3" src="img/audio.jpg">
+                        <img class="ml3" src="img/ubicacion.jpg">
+                    </div>
+                    <div class="bottom">
+                        <img src="img/home.png">
+                        <img src="img/sms.png"> 
+                        <img src="img/facebook.png"> 
+                        <img src="img/noticias.png"> 
+                        <img src="img/mi_cuenta.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- ALERTA5 -->
+            <div id="alerta5">
+                <div class="cabecera"> 
+                    <img class="bg2" src="img/huaral.jpg"> 
+                    <div class="top"> <img class="w100" src="img/top_alerta1.jpg"> </div>
+                    <div class="mid"> 
+                        <img class="w80" src="img/otras.png">
+                        <form>
+                             <textarea name="mensaje" rows="5" cols="50"></textarea>
+                        </form>
+                    </div>
+                    <div class="content">
+                        <img class="ml3" src="img/foto.jpg">
+                        <img class="ml3" src="img/audio.jpg">
+                        <img class="ml3" src="img/ubicacion.jpg">
+                    </div>
+                    <div class="bottom">
+                        <img src="img/home.png">
+                        <img src="img/sms.png"> 
+                        <img src="img/facebook.png"> 
+                        <img src="img/noticias.png"> 
+                        <img src="img/mi_cuenta.png">
+                    </div>
+                </div>
+            </div>
+
+            <!-- FACEBOOK -->
+            <div id ="facebook">
+                <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FHuaral-Noticia%2F810691475618054&amp;width=265&amp;height=690&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=true&amp;show_border=true" scrolling="no" frameborder="0" style="margin: 117px 0 -50px 0; border:none; overflow:hidden; width:265px; height:680px;" allowTransparency="true"></iframe>
+            </div>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
