--- a/www/index.html
+++ b/www/index.html
@@ -222,7 +222,7 @@
 
             <!-- FACEBOOK -->
             <div id ="facebook">
-                <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FHuaral-Noticia%2F810691475618054&amp;width=265&amp;height=690&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=true&amp;show_border=true" scrolling="no" frameborder="0" style="margin: 117px 0 -50px 0; border:none; overflow:hidden; width:265px; height:680px;" allowTransparency="true"></iframe>
+                <iframe src="https://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FHuaral-Noticia%2F810691475618054&amp;width=265&amp;height=690&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=true&amp;show_border=true" scrolling="no" frameborder="0" style="margin: 117px 0 -50px 0; border:none; overflow:hidden; width:265px; height:680px;" allowTransparency="true"></iframe>
             </div>
 
         <script type="text/javascript" src="cordova.js"></script>
