--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,15 @@
         <title>Seguridad Ciudadana</title>
     </head>
     <body>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.0";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
         <div id="contenedor">
              <!-- REGISTRO -->
             <div id="registro">
@@ -221,8 +230,15 @@
             </div>
 
             <!-- FACEBOOK -->
-            <div id ="facebook">
-                <iframe src="https://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FHuaral-Noticia%2F810691475618054&amp;width=265&amp;height=690&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=true&amp;show_border=true" scrolling="no" frameborder="0" style="margin: 117px 0 -50px 0; border:none; overflow:hidden; width:265px; height:680px;" allowTransparency="true"></iframe>
+            <div id ="facebook" style="width:100%;">              
+                <div class="fb-like-box" data-href="https://www.facebook.com/pages/Huaral-Noticia/810691475618054" data-height="700px" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="false"></div>
+                <div class="bottom">
+                        <img src="img/home.png">
+                        <img src="img/sms.png"> 
+                        <img src="img/facebook.png"> 
+                        <img src="img/noticias.png"> 
+                        <img src="img/mi_cuenta.png">
+                    </div>
             </div>
 
         <script type="text/javascript" src="cordova.js"></script>
