--- a/www/index.html
+++ b/www/index.html
@@ -11,14 +11,14 @@
         <title>Seguridad Ciudadana</title>
     </head>
     <body>
-        <div id="fb-root"></div>
+        <!--<div id="fb-root"></div>
         <script>(function(d, s, id) {
           var js, fjs = d.getElementsByTagName(s)[0];
           if (d.getElementById(id)) return;
           js = d.createElement(s); js.id = id;
           js.src = "https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.0";
           fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+        }(document, 'script', 'facebook-jssdk'));</script>-->
 
         <div id="contenedor">
              <!-- REGISTRO -->
@@ -231,7 +231,8 @@
 
             <!-- FACEBOOK -->
             <div id ="facebook" style="width:100%;">              
-                <div class="fb-like-box" data-href="https://www.facebook.com/pages/Huaral-Noticia/810691475618054" data-height="700px" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="false"></div>
+                <!--<div class="fb-like-box" data-href="https://www.facebook.com/pages/Huaral-Noticia/810691475618054" data-height="700px" data-colorscheme="light" data-show-faces="false" data-header="false" data-stream="true" data-show-border="false"></div>-->
+                <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FHuaral-Noticia%2F810691475618054&amp;height=700&amp;colorscheme=light&amp;show_faces=true&amp;header=true&amp;stream=true&amp;show_faces=false" scrolling="no" frameborder="0" style="margin:0; border:none; overflow:hidden; width:100%; height:700px;" allowTransparency="true"></iframe>
                 <div class="bottom">
                         <img src="img/home.png">
                         <img src="img/sms.png"> 
